--- a/views/asm.html
+++ b/views/asm.html
@@ -8,11 +8,26 @@ ul{
 }
 </style>
 
+<table class="table table-striped table-bordered table-hover">
+    <thead>
+      <th>
+        Executable name
+      </th>
+  </thead>
+  <tbody>
+    <tr ng-repeat="entry in filesList">
+      <td ng-click="setFunctions(entry)">
+        <a class="clickable" ng-click="setFunctions(entry)">{{entry}}</a>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 <div style="float:left">
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <th colspan="3">
-        <pagination total-items="tableItems.length" ng-model="currentPage" max-size="5"
+        <pagination total-items="functionsList.length" ng-model="currentPage" max-size="5"
         boundary-links="true"
         items-per-page="numPerPage" class="pagination-sm" style="margin: 0px !important;">
       </pagination>
@@ -21,7 +36,7 @@ ul{
     </th>
   </thead>
   <tbody>
-    <tr ng-repeat="entry in tableItems | filter : paginate track by $index">
+    <tr ng-repeat="entry in functionsList | filter : paginate track by $index">
       <td style="width:1px">
         {{entry.address}}
       </td>
