--- a/views/asm.html
+++ b/views/asm.html
@@ -9,30 +9,36 @@ ul{
 </style>
 
 <table class="table table-striped table-bordered table-hover">
-    <thead>
-      <th>
-        Executable name
-      </th>
+  <thead>
+    <th>
+      Executable name
+    </th>
   </thead>
   <tbody>
     <tr ng-repeat="entry in filesList">
-      <td ng-click="setFunctions(entry)">
-        <a class="clickable" ng-click="setFunctions(entry)">{{entry}}</a>
+      <td class="clickable" ng-style="getFileBackgroundStyle(entry)" ng-click="setFile(entry)">
+        <a class="clickable" ng-click="setFile(entry)">{{entry}}</a>
       </td>
     </tr>
   </tbody>
 </table>
 
-<div style="float:left">
+<div ng-show="selectedFile">
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <th colspan="3">
-        <pagination total-items="functionsList.length" ng-model="currentPage" max-size="5"
-        boundary-links="true"
-        items-per-page="numPerPage" class="pagination-sm" style="margin: 0px !important;">
-      </pagination>
-      <!--search box-->      
-      <input type="text" ng-change="filterTableData()" ng-model="textFilter" placeholder="search" ng-change="checkFilterEmpty()">
+        <div>
+          <div>
+            <pagination total-items="functionsList.length" ng-model="currentPage" max-size="5"
+            boundary-links="true"
+            items-per-page="numPerPage" class="pagination-sm" style="margin: 0px !important;">
+          </pagination>
+          <!--search box-->      
+        </div>
+        <div>
+          <input type="text" ng-change="filterTableData()" ng-model="textFilter" placeholder="search">
+        </div>
+      </div>
     </th>
   </thead>
   <tbody>
@@ -41,21 +47,21 @@ ul{
         {{entry.address}}
       </td>
       <td>
-        <a class="clickable" ng-click="setAssembly(entry.name)">{{entry.name}}</a>
+        <a class="clickable" ng-click="setFunction(entry.name)">{{entry.name}}</a>
       </td>
     </tr>
   </tbody>
 </table>
 </div>
 
-<div ng-show="selectedFunction" class="panel panel-default" style="float:left; background: #F5F5F5; margin-left: 10px">
+<div ng-show="selectedFunction" class="panel panel-default" style="float:left; background: #F5F5F5">
   <div class="panel-heading">{{selectedFunction}}</div>
   <div class="panel-body">
     <ul>
       <div style="font-family: Courier">
-        <li ng-repeat="line in assembly">
-          {{line.address}} : <code class="language-assembly" lang="assembly">{{line.name}}</code>
-          <span ng-click="setAssembly2(line.dest)" class="clickable label label-primary" ng-show="line.dest">({{line.dest}})</span>
+        <li ng-repeat="line in currentAssembly">
+          {{line.address}} :
+          <code ng-class="getCodeStyle(line.name)" ng-click="setFunction2(line.dest)">{{format(line)}}</code>
         </li>
       </div>
     </ul>
@@ -67,8 +73,23 @@ ul{
   <div class="panel-body">
     <ul>
       <div style="font-family: Courier">
-        <li ng-repeat="line in assembly2">
-          {{line.address}} : <code class="language-assembly" lang="assembly">{{line.name}}</code> <span class="label label-primary" ng-show="line.dest">({{line.dest}})</span>
+        <li ng-repeat="line in currentAssembly2">
+          {{line.address}} :
+          <code ng-class="getCodeStyle(line.name)" ng-click="setFunction3(line.dest)">{{format(line)}}</code>
+        </li>
+      </div>
+    </ul>
+  </div>
+</div>
+
+<div ng-show="selectedFunction3" class="panel panel-default" style="float:left; background: #F5F5F5; margin-left: 10px">
+  <div class="panel-heading">{{selectedFunction3}}</div>
+  <div class="panel-body">
+    <ul>
+      <div style="font-family: Courier">
+        <li ng-repeat="line in currentAssembly3">
+          {{line.address}} :
+          <code style="cursor:auto" ng-class="getCodeStyle(line.name)">{{format(line)}}</code>
         </li>
       </div>
     </ul>
