--- a/views/asm.html
+++ b/views/asm.html
@@ -54,44 +54,38 @@ ul{
 </table>
 </div>
 
-<div ng-show="selectedFunction" class="panel panel-default" style="float:left; background: #F5F5F5">
+<div ng-show="selectedFunction" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px">
   <div class="panel-heading">{{selectedFunction}}</div>
-  <div class="panel-body">
+  <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
-      <div style="font-family: Courier">
-        <li ng-repeat="line in currentAssembly">
-          {{line.address}} :
-          <code ng-class="getCodeStyle(line.name)" ng-click="setFunction2(line.dest)">{{format(line)}}</code>
-        </li>
-      </div>
+      <li ng-repeat="line in currentAssembly">
+        {{line.address}} :
+        <code ng-class="getCodeStyle(line.name)" ng-click="setFunction2(line.dest)">{{format(line)}}</code>
+      </li>
     </ul>
   </div>
 </div>
 
-<div ng-show="selectedFunction2" class="panel panel-default" style="float:left; background: #F5F5F5; margin-left: 10px">
+<div ng-show="selectedFunction2" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px; margin-left: 10px">
   <div class="panel-heading">{{selectedFunction2}}</div>
-  <div class="panel-body">
+  <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
-      <div style="font-family: Courier">
-        <li ng-repeat="line in currentAssembly2">
-          {{line.address}} :
-          <code ng-class="getCodeStyle(line.name)" ng-click="setFunction3(line.dest)">{{format(line)}}</code>
-        </li>
-      </div>
+      <li ng-repeat="line in currentAssembly2">
+        {{line.address}} :
+        <code ng-class="getCodeStyle(line.name)" ng-click="setFunction3(line.dest)">{{format(line)}}</code>
+      </li>
     </ul>
   </div>
 </div>
 
-<div ng-show="selectedFunction3" class="panel panel-default" style="float:left; background: #F5F5F5; margin-left: 10px">
+<div ng-show="selectedFunction3" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px;margin-left: 10px">
   <div class="panel-heading">{{selectedFunction3}}</div>
-  <div class="panel-body">
+  <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
-      <div style="font-family: Courier">
-        <li ng-repeat="line in currentAssembly3">
-          {{line.address}} :
-          <code style="cursor:auto" ng-class="getCodeStyle(line.name)">{{format(line)}}</code>
-        </li>
-      </div>
+      <li ng-repeat="line in currentAssembly3">
+        {{line.address}} :
+        <code style="cursor:auto" ng-class="getCodeStyle(line.name)">{{format(line)}}</code>
+      </li>
     </ul>
   </div>
 </div>
