--- a/views/asm.html
+++ b/views/asm.html
@@ -33,16 +33,17 @@ ul{
             boundary-links="true"
             items-per-page="numPerPage" class="pagination-sm" style="margin: 0px !important;">
           </pagination>
-          <!--search box-->      
         </div>
         <div>
+          <!--search box-->      
           <input type="text" ng-change="filterTableData()" ng-model="textFilter" placeholder="search">
+          <span style="color: #868686">Showing <span style="color: #428BCA">{{functionsList.length}}</span> functions</span>
         </div>
       </div>
     </th>
   </thead>
   <tbody>
-    <tr ng-repeat="entry in functionsList | filter : paginate track by $index">
+    <tr ng-click="setFunction(entry.name)" ng-repeat="entry in functionsList | filter : paginate track by $index">
       <td style="width:1px">
         {{entry.address}}
       </td>
@@ -54,8 +55,8 @@ ul{
 </table>
 </div>
 
-<div ng-show="selectedFunction" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px">
-  <div class="panel-heading">{{selectedFunction}}</div>
+<div ng-click="openStatsModal()" ng-show="selectedFunction" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px">
+  <div class="panel-heading" style="font-weight:bold">{{selectedFunction}} <span ng-click="openStatsModal()" style="float:right" class="glyphicon glyphicon-stats clickable"/></div>
   <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
       <li ng-repeat="line in currentAssembly">
