--- a/views/asm.html
+++ b/views/asm.html
@@ -55,8 +55,8 @@ ul{
 </table>
 </div>
 
-<div ng-click="openStatsModal()" ng-show="selectedFunction" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px">
-  <div class="panel-heading" style="font-weight:bold">{{selectedFunction}} <span ng-click="openStatsModal()" style="float:right" class="glyphicon glyphicon-stats clickable"/></div>
+<div ng-click="openStatsModal()" ng-show="selectedFunction" class="panel panel-default assemblylisting">
+  <div class="panel-heading boldText">{{selectedFunction}} <span title="Histogram" ng-click="openStatsModal()" style="float:right" class="glyphicon glyphicon-stats clickable"/></div>
   <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
       <li ng-repeat="line in currentAssembly">
@@ -67,7 +67,7 @@ ul{
   </div>
 </div>
 
-<div ng-show="selectedFunction2" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px; margin-left: 10px">
+<div ng-show="selectedFunction2" class="panel panel-default assemblylisting" style="margin-left: 10px">
   <div class="panel-heading">{{selectedFunction2}}</div>
   <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
@@ -79,7 +79,7 @@ ul{
   </div>
 </div>
 
-<div ng-show="selectedFunction3" class="panel panel-default" style="float:left; background: #F5F5F5; min-width: 350px;margin-left: 10px">
+<div ng-show="selectedFunction3" class="panel panel-default assemblylisting" style="margin-left: 10px">
   <div class="panel-heading">{{selectedFunction3}}</div>
   <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
