--- a/views/asm.html
+++ b/views/asm.html
@@ -23,6 +23,13 @@ ul{
   </tbody>
 </table>
 
+
+<div ng-show="error" class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+  <span class="sr-only">Error:</span>
+  {{error}}
+</div>
+
 <div ng-show="selectedFile">
   <table class="table table-striped table-bordered table-hover">
     <thead>
