--- a/views/asm.html
+++ b/views/asm.html
@@ -8,6 +8,7 @@ ul{
 }
 </style>
 
+
 <table class="table table-striped table-bordered table-hover">
   <thead>
     <th>
@@ -31,37 +32,6 @@ ul{
 </div>
 
 
-<!-- Object files -->
-
-
-<div ng-show="archiveMap">
-  <table class="table table-striped table-bordered table-hover">
-    <thead>
-      <th>
-        Object files in {{selectedFile}}
-        <br>
-        <br>
-        <pagination total-items="archiveFiles.length" ng-model="currentPageArchive" max-size="5"
-        boundary-links="true"
-        items-per-page="numPerPage" class="pagination-sm" style="margin: 0px !important;">
-      </pagination>
-      <form ng-submit="filterObjectTableData()">  
-        <input typeahead="term for term in autoCompleteValues | filter:$viewValue | limitTo:8" type="text" ng-model="objectTextFilter"
-        placeholder="search" ng-change="filterObjectTableData(); functionsList=undefined; selectedFunction=undefined" typeahead-on-select="filterObjectTableData()">
-      </form>
-    </th>
-  </thead>
-  <tbody>
-    <tr ng-repeat="entry in archiveFiles | filter : paginateArchive track by $index">
-      <td class="clickable" ng-click="setObjectFile(entry)" ng-style="getBackgroundStyle(entry, 'object files')">
-        <a class="clickable" ng-click="setObjectFile(entry)">{{entry}}</a>
-      </td>
-    </tr>
-  </tbody>
-</table>
-</div>
-
-
 <!-- Functions -->
 
 
@@ -69,7 +39,7 @@ ul{
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <th colspan="3">
-        Functions in {{archiveMap == undefined ? selectedFile : selectedObjectFile}}
+        Functions in selectedFile
         <br>
         <br>
         <div>
@@ -81,19 +51,22 @@ ul{
         </div>
         <div>
           <input type="text" ng-model="textFilter" placeholder="search" ng-change="filterTableData()"/>
-          <span style="color: #868686">Showing <span style="color: black; font-size: 15px; font-weight: bolder">{{functionsList.length}}
-          </span> functions</span>
+          <span style="color: #868686"><span style="color: black; font-size: 15px; font-weight: bolder">{{functionsList.length}}
+          </span> functions matched</span>
         </div>
       </div>
     </th>
   </thead>
   <tbody>
-    <tr class="clickable" ng-click="setFunction(entry.name, entry.address)" ng-repeat="entry in functionsList | filter : paginate track by $index">
+    <tr class="clickable" ng-click="setFunction(entry, 0)" ng-repeat="entry in functionsList | filter : paginate track by $index">
       <td style="width:1px" ng-style="getBackgroundStyle(entry, 'functions')">
         {{entry.address}}
       </td>
       <td ng-style="getBackgroundStyle(entry, 'functions')">
-        <a class="clickable" ng-click="setFunction(entry.name, entry.address)">{{entry.name}}</a>
+        <a class="clickable" ng-click="setFunction(entry, 0)">{{entry.name}}</a>
+        <span class="objectSubscript">
+          {{entry.obj}}
+        </span>
       </td>
     </tr>
   </tbody>
@@ -106,50 +79,50 @@ ul{
 
 
 
-<div ng-show="selectedFunction" class="panel panel-default assemblylisting">
-  <div class="panel-heading boldText">{{selectedFunction}} 
-    <a class="clickable" style ="float:right" ng-click="openStatsModal()">
+<div ng-show="selectedFunction[0]" class="panel panel-default assemblylisting">
+  <div class="panel-heading boldText">{{selectedFunction[0].name}} 
+    <a class="clickable" style ="float:right" ng-click="openStatsModal(selectedFunction[0])">
       Histogram
       <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
     </a>
   </div>
   <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
-      <li ng-repeat="line in currentAssembly">
+      <li ng-repeat="line in currentAssembly[0]">
         {{line.address}} :
-        <code ng-class="getCodeStyle(line.name)" ng-click="setFunction2(line.dest)">{{format(line)}}</code>
+        <code ng-class="getCodeStyle(line.name)" ng-click="line.dest ? setFunction(line, 1) : ''">{{format(line)}}</code>
       </li>
     </ul>
   </div>
 </div>
 
-<div ng-show="selectedFunction2" class="panel panel-default assemblylisting" style="margin-left: 10px">
-  <div class="panel-heading boldText">{{selectedFunction2}}
-    <a class="clickable" style ="float:right" ng-click="openStatsModal()">
+<div ng-show="selectedFunction[1]" class="panel panel-default assemblylisting" style="margin-left: 10px">
+  <div class="panel-heading boldText">{{selectedFunction[1].name}}
+    <a class="clickable" style ="float:right" ng-click="openStatsModal(selectedFunction[1])">
       Histogram
       <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
     </a>
   </div>
   <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
-      <li ng-repeat="line in currentAssembly2">
+      <li ng-repeat="line in currentAssembly[1]">
         {{line.address}} :
-        <code ng-class="getCodeStyle(line.name)" ng-click="setFunction3(line.dest)">{{format(line)}}</code>
+        <code ng-class="getCodeStyle(line.name)" ng-click="setFunction(line, 2)">{{format(line)}}</code>
       </li>
     </ul>
   </div>
 </div>
 
-<div ng-show="selectedFunction3" class="panel panel-default assemblylisting" style="margin-left: 10px">
-  <div class="panel-heading boldText">{{selectedFunction3}}
-    <a class="clickable" style ="float:right" ng-click="openStatsModal()">
+<div ng-show="selectedFunction[2]" class="panel panel-default assemblylisting" style="margin-left: 10px">
+  <div class="panel-heading boldText">{{selectedFunction[2].name}}
+    <a class="clickable" style ="float:right" ng-click="openStatsModal(selectedFunction[2])">
       Histogram
       <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
     </a>
   </div>
   <div class="panel-body" style="max-height: 85vh; overflow: auto">
     <ul>
-      <li ng-repeat="line in currentAssembly3">
+      <li ng-repeat="line in currentAssembly[2]">
         {{line.address}} :
         <code style="cursor:auto" ng-class="getCodeStyle(line.name)">{{format(line)}}</code>
       </li>
