--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,16 @@ body {
     overflow-y: scroll;
 }
 
+.opaque{
+    opacity: 1;
+}
+
+.fade{
+    -webkit-transition: opacity 3s; /* For Safari 3.1 to 6.0 */
+    transition: opacity 3s;
+    opacity: 0;
+}
+
 .assemblylisting {
     float:left;
     background: #F5F5F5;
