--- a/views/asm.html
+++ b/views/asm.html
@@ -8,21 +8,16 @@ ul{
 }
 </style>
 
-
-<table class="table table-striped table-bordered table-hover">
-  <thead>
-    <th>
-      Binaries
-    </th>
-  </thead>
-  <tbody>
+<div class="panel panel-default">
+  <div class="panel-heading">Binaries</div>
+  <table class="table table-bordered table-hover">
     <tr ng-repeat="entry in filesList">
       <td class="clickable" ng-style="getBackgroundStyle(entry, 'files')" ng-click="setFile(entry)">
-        <a class="clickable" ng-click="setFile(entry)">{{entry}}</a>
+        <a class="clickable">{{entry}}</a>
       </td>
     </tr>
-  </tbody>
-</table>
+  </table>
+</div>
 
 
 <div ng-show="error" class="alert alert-danger" role="alert">
@@ -35,13 +30,11 @@ ul{
 <!-- Functions -->
 
 
-<div ng-show="functionsList">
+<div class="panel panel-default" ng-show="functionsList">
+  <div class="panel-heading">Functions in <strong>{{selectedFile}}</strong></div>
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <th colspan="3">
-        Functions in {{selectedFile}}
-        <br>
-        <br>
         <div>
           <div>
             <pagination total-items="functionsList.length" ng-model="currentPage" max-size="5"
@@ -59,17 +52,22 @@ ul{
   </thead>
   <tbody>
     <tr class="clickable" ng-click="setFunction(entry, 0)" ng-repeat="entry in functionsList | filter : paginate track by $index">
-      <td style="width:1px" ng-style="getBackgroundStyle(entry, 'functions')">
-        {{entry.address}}
-      </td>
-      <td ng-style="getBackgroundStyle(entry, 'functions')">
-        <a class="clickable" ng-click="setFunction(entry)">{{entry.name}}</a>
-        <span class="objectSubscript">
-          {{entry.obj}}
-        </span>
-      </td>
-    </tr>
-  </tbody>
+      <td style="width:1px; background-color: #dff0d8"
+      title="drag to diff"
+      ad-drag="true"
+      ad-drag-data="entry"
+      ad-drag-begin="onDragStart($data, $dragElement, $event);"
+      ad-drag-end="onDataEnd($data, $dragElement, $event);">
+      {{entry.address}}
+    </td>
+    <td ng-style="getBackgroundStyle(entry, 'functions')">
+      <a class="clickable" ng-click="setFunction(entry)">{{entry.name}}</a>
+      <span class="objectSubscript">
+        {{entry.obj}}
+      </span>
+    </td>
+  </tr>
+</tbody>
 </table>
 </div>
 
@@ -80,52 +78,89 @@ ul{
 
 
 <div ng-show="selectedFunction[0]" class="panel panel-default assemblylisting">
-  <div class="panel-heading boldText">{{selectedFunction[0].name}} 
-    <a class="clickable" style ="float:right" ng-click="openStatsModal(selectedFunction[0])">
-      &nbsp Histogram
-      <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
-    </a>
-  </div>
-  <div class="panel-body" style="max-height: 85vh; overflow: auto">
-    <ul>
-      <li ng-repeat="line in currentAssembly[0]">
-        {{line.address}} :
-        <code ng-class="getCodeStyle(line.name)" ng-click="line.destName ? setFunction2(line, 1) : ''">{{format(line)}}</code>
-      </li>
-    </ul>
-  </div>
+  <div class="panel-heading boldText" style="background-color: #dff0d8"
+  title="drag to diff"
+  ad-drag="true"
+  ad-drag-data="selectedFunction[0]"
+  ad-drag-begin="onDragStart($data, $dragElement, $event);"
+  ad-drag-end="onDataEnd($data, $dragElement, $event);">
+  {{selectedFunction[0].name}}
+  <a ad-prevent-drag style="float:right; cursor:pointer" ng-click="openChartModal(selectedFunction[0])">
+    &nbsp Histogram
+    <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
+  </a>
+</div>
+<div class="panel-body" style="max-height: 85vh; overflow: auto">
+  <ul>
+    <li ng-repeat="line in currentAssembly[0]">
+      {{line.address}} :
+      <code ng-class="getCodeStyle(line.name)" ng-click="line.destName ? setFunction2(line, 1) : ''">{{format(line)}}</code>
+    </li>
+  </ul>
+</div>
 </div>
 
 <div ng-show="selectedFunction[1]" class="panel panel-default assemblylisting" style="margin-left: 10px">
-  <div class="panel-heading boldText">{{selectedFunction[1].name}}
-    <a class="clickable" style ="float:right" ng-click="openStatsModal(selectedFunction[1])">
-      &nbsp Histogram
-      <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
-    </a>
-  </div>
-  <div class="panel-body" style="max-height: 85vh; overflow: auto">
-    <ul>
-      <li ng-repeat="line in currentAssembly[1]">
-        {{line.address}} :
-        <code ng-class="getCodeStyle(line.name)" ng-click="line.destName ? setFunction2(line, 2) : ''">{{format(line)}}</code>
-      </li>
-    </ul>
-  </div>
+  <div class="panel-heading boldText"
+  title="drag to diff"
+  ad-drag="true"
+  ad-drag-data="selectedFunction[0]"
+  ad-drag-begin="onDragStart($data, $dragElement, $event);"
+  ad-drag-end="onDataEnd($data, $dragElement, $event);">{{selectedFunction[1].name}}
+  <a class="clickable" style ="float:right" ng-click="openChartModal(selectedFunction[1])">
+    &nbsp Histogram
+    <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
+  </a>
+</div>
+<div class="panel-body" style="max-height: 85vh; overflow: auto">
+  <ul>
+    <li ng-repeat="line in currentAssembly[1]">
+      {{line.address}} :
+      <code ng-class="getCodeStyle(line.name)" ng-click="line.destName ? setFunction2(line, 2) : ''">{{format(line)}}</code>
+    </li>
+  </ul>
+</div>
 </div>
 
-<div ng-show="selectedFunction[2]" class="panel panel-default assemblylisting" style="margin-left: 10px">
-  <div class="panel-heading boldText">{{selectedFunction[2].name}}
-    <a class="clickable" style ="float:right" ng-click="openStatsModal(selectedFunction[2])">
-      &nbsp Histogram
-      <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
-    </a>
+<div class="panel panel-default assemblylisting" style="margin-left: 10px" ng-show="selectedFunction[2]">
+  <div class="panel-heading boldText"
+  title="drag to diff"
+  ad-drag="true"
+  ad-drag-data="selectedFunction[0]"
+  ad-drag-begin="onDragStart($data, $dragElement, $event);"
+  ad-drag-end="onDataEnd($data, $dragElement, $event);">
+  {{selectedFunction[2].name}}
+  <a class="clickable" style ="float:right" ng-click="openChartModal(selectedFunction[2])">
+    &nbsp Histogram
+    <span class="badge"><span class="glyphicon glyphicon-stats clickable"></span></span>
+  </a>
+</div>
+<div class="panel-body" style="max-height: 85vh; overflow: auto">
+  <ul>
+    <li ng-repeat="line in currentAssembly[2]">
+      {{line.address}} :
+      <code style="cursor:auto" ng-class="getCodeStyle(line.name)">{{format(line)}}</code>
+    </li>
+  </ul>
+</div>
+</div>
+
+
+<div ng-show="showDiffBox" class="panel panel-success" style="position: fixed; top:50%; right: 5%;" ng-class="diffBoxClass"
+ad-drop="true"
+ad-drop-over="onDragOver($data, $dragElement, $dropElement, $event);"
+ad-drop-end="onDrop($data, $dragElement, $dropElement, $event);">
+<div class="panel-heading">Functions to diff</div>
+<div class="panel-body">
+  <span ng-hide="diffList.length">Drop here</span>
+  <ul style="list-style-type: circle">
+    <li ng-repeat="line in diffList track by $index">
+      <strong>{{line.name}}</strong> in <strong>{{line.file}}</strong>
+    </li>
+  </ul>
+  <div ng-show="diffList.length == 2">
+    <button type="button" class="btn btn-success" ng-click="openDiffModal(diffList)">Diff</button>
+    <button style="float:right" type="button" class="btn btn-danger" ng-click="diffBoxClass='fade'">Hide</button>
   </div>
-  <div class="panel-body" style="max-height: 85vh; overflow: auto">
-    <ul>
-      <li ng-repeat="line in currentAssembly[2]">
-        {{line.address}} :
-        <code style="cursor:auto" ng-class="getCodeStyle(line.name)">{{format(line)}}</code>
-      </li>
-    </ul>
-  </div>
+</div>
 </div>
