--- a/views/statsTemplate.html
+++ b/views/statsTemplate.html
@@ -25,7 +25,7 @@
 		<br>
 		<br>
 		<br>
-		Loading chart ...
+    	<ad-loading-icon loading-icon-size="20px"></ad-loading-icon>
 	</div>
 	<div google-chart on-ready="mainChartReady=true" chart="mainChart" style="width: 100%; height: 400px"></div>
 </div>
