--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,7 @@ body {
     -webkit-transition: opacity 3s; /* For Safari 3.1 to 6.0 */
     transition: opacity 3s;
     opacity: 0;
+    pointer-events: none;
 }
 
 .assemblylisting {
