--- a/views/asm.html
+++ b/views/asm.html
@@ -12,7 +12,7 @@ ul{
   <div class="panel-heading">Binaries</div>
   <table class="table table-bordered table-hover">
     <tr ng-repeat="entry in filesList">
-      <td class="clickable" ng-style="getBackgroundStyle(entry, 'files')" ng-click="setFile(entry)">
+      <td class="clickable" ng-style="getBackgroundStyle(entry, 'files')" ng-click="setFile(entry, 'address', 'ascending')">
         <a class="clickable">{{entry}}</a>
       </td>
     </tr>
@@ -38,17 +38,36 @@ ul{
   <table ng-hide="functionsLoading" class="table table-striped table-bordered table-hover">
     <thead>
       <th colspan="3">
+        <!-- pagination -->
         <div>
-          <div>
+          <div style="margin-left: 5px; margin-bottom: -5px">
             <pagination total-items="functionsList.length" ng-model="currentPage" max-size="5"
             boundary-links="true"
             items-per-page="numPerPage" class="pagination-sm" style="margin: 0px !important;">
           </pagination>
         </div>
-        <div>
-          <input type="text" ng-model="textFilter" placeholder="search" ng-change="filterTableData()"/>
+        <!-- search -->
+        <form style="margin-left: -10px" class="navbar-form navbar-left">
+          <input class="form-control" type="text" ng-model="textFilter" placeholder="search" ng-change="filterTableData()"/>
           <span style="color: #868686"><span style="color: black; font-size: 15px; font-weight: bolder">{{functionsList.length}}
           </span> functions matched</span>
+        </form>
+        <!-- sort dropdown -->
+        <div class="dropdown navbar-right">
+          Sort by
+          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            {{sortBy}} {{sortDirection}}
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a ng-click="setFile(selectedFile, 'address', 'ascending')">address ascending</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a ng-click="setFile(selectedFile, 'name', 'ascending')">name ascending</a></li>
+            <li><a ng-click="setFile(selectedFile, 'name', 'descending')">name descending</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a ng-click="setFile(selectedFile, 'size', 'ascending')">size ascending</a></li>
+            <li><a ng-click="setFile(selectedFile, 'size', 'descending')">size descending</a></li>
+          </ul>
         </div>
       </div>
     </th>
@@ -64,8 +83,8 @@ ul{
       ad-drag-end="onDataEnd($data, $dragElement, $event);">
       {{entry.address}}
     </td>
-    <td ng-style="getBackgroundStyle(entry, 'functions')">
-      <a class="clickable" ng-click="setFunction(entry)">{{entry.name}}</a>
+    <td ng-style="getBackgroundStyle(entry, 'functions')" style="min-width: 1000px; max-width:1050px">
+      <a style="word-wrap: break-word;" class="clickable" ng-click="setFunction(entry)">{{entry.name}}</a>
       <span class="objectSubscript">
         {{entry.obj}}
       </span>
@@ -79,12 +98,12 @@ ul{
 <!-- Assembly -->
 
 
-<div ng-show="selectedFunction[0]" class="panel panel-default assemblylisting">
+<div ng-show="selectedFunction[0]" class="panel panel-default assemblylisting" style="max-width:1050px">
   <div ng-show="assemblyLoading[0]" style="width: 10%; margin: 0 auto">
     <ad-loading-icon loading-icon-size="20px"></ad-loading-icon>
   </div>
   <div ng-hide="assemblyLoading[0]">
-    <div class="panel-heading boldText" style="background-color: #dff0d8"
+    <div class="panel-heading boldText" style="background-color: #dff0d8; overflow:hidden;"
     id="0"
     title="drag to diff"
     ad-drag="true"
@@ -113,7 +132,7 @@ ul{
     <ad-loading-icon loading-icon-size="20px"></ad-loading-icon>
   </div>
   <div ng-hide="assemblyLoading[1]">
-    <div class="panel-heading boldText" style="background-color: #dff0d8"
+    <div class="panel-heading boldText" style="background-color: #dff0d8; overflow:hidden;"
     id="1"
     title="drag to diff"
     ad-drag="true"
@@ -141,7 +160,7 @@ ul{
     <ad-loading-icon loading-icon-size="20px"></ad-loading-icon>
   </div>
   <div ng-hide="assemblyLoading[2]">
-    <div class="panel-heading boldText" style="background-color: #dff0d8"
+    <div class="panel-heading boldText" style="background-color: #dff0d8; overflow:hidden;"
     title="drag to diff"
     id="2"
     ad-drag="true"
@@ -174,9 +193,11 @@ ad-drop-end="onDrop($data, $dragElement, $dropElement, $event);">
 <div class="panel-body">
   <span ng-hide="diffList.length">Drop here</span>
   <ul style="list-style-type: circle">
-    <li ng-repeat="line in diffList track by $index">
-      <strong>{{line.name}}</strong> in <strong>{{line.file}}</strong>
-    </li>
+    <div style="max-width:500px; overflow:hidden;">
+      <li ng-repeat="line in diffList track by $index">
+        <strong>{{line.name}}</strong> in <strong>{{line.file}}</strong>
+      </li>
+    </div>
   </ul>
   <div ng-show="diffList.length == 2">
     <button type="button" class="btn btn-success" ng-click="openDiffModal(diffList)">Diff</button>
